// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docusaurus-plugin-content-pages loads simple pages 1`] = `
[
  {
    "permalink": "/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "title": "MDX page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/hello/mdxPage",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/translatedJs",
    "source": "@site/src/pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/hello/translatedMd",
    "source": "@site/src/pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
]
`;

exports[`docusaurus-plugin-content-pages loads simple pages with french translations 1`] = `
[
  {
    "permalink": "/fr/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/fr/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "title": "MDX page",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/mdxPage",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/fr/hello/translatedJs",
    "source": "@site/i18n/fr/docusaurus-plugin-content-pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page (fr)",
    "editUrl": undefined,
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": undefined,
    "lastUpdatedBy": undefined,
    "permalink": "/fr/hello/translatedMd",
    "source": "@site/i18n/fr/docusaurus-plugin-content-pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/fr/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
]
`;

exports[`docusaurus-plugin-content-pages loads simple pages with last update 1`] = `
[
  {
    "permalink": "/",
    "source": "@site/src/pages/index.js",
    "type": "jsx",
  },
  {
    "permalink": "/typescript",
    "source": "@site/src/pages/typescript.tsx",
    "type": "jsx",
  },
  {
    "description": "Markdown index page",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/hello/",
    "source": "@site/src/pages/hello/index.md",
    "title": "Index",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "description": "my MDX page",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
      "description": "my MDX page",
      "title": "MDX page",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/hello/mdxPage",
    "source": "@site/src/pages/hello/mdxPage.mdx",
    "title": "MDX page",
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/translatedJs",
    "source": "@site/src/pages/hello/translatedJs.js",
    "type": "jsx",
  },
  {
    "description": "translated Markdown page",
    "editUrl": "url placeholder",
    "frontMatter": {
      "custom_frontMatter": "added by parseFrontMatter",
    },
    "lastUpdatedAt": 1539502055000,
    "lastUpdatedBy": "Author",
    "permalink": "/hello/translatedMd",
    "source": "@site/src/pages/hello/translatedMd.md",
    "title": undefined,
    "type": "mdx",
    "unlisted": false,
  },
  {
    "permalink": "/hello/world",
    "source": "@site/src/pages/hello/world.js",
    "type": "jsx",
  },
]
`;
